# Cifar-100_with_Vision_Transformer

./: README.md  evaluate.py  main.py  pyproject.toml  train.py
src/: __init__.py  attention.py  config.py  data.py  embeddings.py  moe.py  normalization.py  transformer.py
