[project]
name = "cifar-100-with-transformers"
version = "0.1.0"
description = "Vision Transformer with Mixture of Experts for CIFAR-100 classification"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Sahil Murmu", email = "msahil2603@gmail.com" }
]
keywords = ["vision-transformer", "mixture-of-experts", "cifar-100", "deep-learning", "pytorch"]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.0.270",
    "mypy>=1.0.0",
]
viz = [
    "matplotlib>=3.7.0",
    "tensorboard>=2.13.0",
]
all = [
    "cifar-100-with-transformers[dev,viz]",
]

[project.scripts]
train-vit = "train:main"
evaluate-vit = "evaluate:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "explained*"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
